# Brain-on-Switch

./: .gitignore  README.md
IMIS/YaTC/: README.md  dataset.py  engine.py  finetune.py  models_YaTC.py  opts.py
IMIS/YaTC/util/: pos_embed.py
IMIS/system/: CMakeLists.txt  README.md  common.hpp  configTemplate.json  main.cpp
IMIS/system/commune/: CMakeLists.txt  analyzerWorker.cpp  analyzerWorker.hpp  bufferWorker.cpp  bufferWorker.hpp  deviceConfig.cpp  deviceConfig.hpp  dpdkCommon.hpp  parserWorker.cpp  parserWorker.hpp  poolWorker.cpp  poolWorker.hpp
PerPacket/: README.md  opts.py  train.py
dataset/: README.md  pcap2json.py  prepare_dataset.py  sampling.py
dataset/BOTIOT/: labels.json
dataset/ISCXVPN2016/: labels.json
dataset/PeerRush/: labels.json
model/: README.md  aggregator.py  model.py  model_convertion.ipynb  opts.py  train.py  trainer.py
model/utils/: bnn_modules.py  data_loader.py  early_stopping.py  metric.py  model_rwi.py  seed.py
p4/: README.md
p4/fw_tables/BOTIOT/: embedding_ipd.json  embedding_len.json  gru.json  init_gru.json  output.json
p4/fw_tables/CICIOT2022/: embedding_ipd.json  embedding_len.json  gru.json  init_gru.json  output.json
p4/fw_tables/ISCXVPN2016/: embedding_ipd.json  embedding_len.json  gru.json  init_gru.json  output.json
p4/fw_tables/PeerRush/: embedding_ipd.json  embedding_len.json  gru.json  init_gru.json  output.json
p4/normal_version/: BoS_normal.p4  ambiguous_cnt.p4  classify.p4  eg_global_cnt.p4  embedding.p4  headers.p4  ig_global_cnt.p4  ig_gru.p4  last_timestamp.p4  mem_and_swap.p4  parsers.p4  per_packet.p4  pkt_cnt.p4  prepare.p4  tab_cmp012_entries.p4  tab_cmp345_entries.p4  util.p4
p4/testbed_version/: BoS_testbed.p4  aux_eg_global_cnt.p4  aux_ig_global_cnt.p4  eg_global_cnt.p4  eg_gru.p4  flow_manager.p4  headers.p4  ig_stored_escalation_flag.p4  parsers.p4  prepare.p4  tab_cmp012345_entries.p4
p4/testbed_version/runtime/: cleanup.py  packet_monitor.py
p4/testbed_version/setup/: check_device.py  install_per_packet_entry.py  install_table_entry.py  setup_all.py  setup_forward.py  setup_mirror.py  setup_threshold.py
(+8 files in other folders)
